[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot_game_tools/scripts/ggt_main.gd" type="Script" id=1]

[node name="GGT" type="ScrollContainer"]
anchor_top = 0.000877228
anchor_right = 0.0341797
anchor_bottom = 1.00088
margin_right = 365.0
scroll_horizontal_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 678.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 678.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 3

[node name="Spacer1" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 10.0
rect_min_size = Vector2( 20, 0 )
custom_constants/separation = 10

[node name="HeaderLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 400.0
margin_bottom = 28.0
hint_tooltip = "Audio bus for background musics"
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HeaderLabel"]
margin_left = 116.0
margin_right = 283.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
text = "Character Controller - GGT"
align = 1

[node name="Spacer2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 400.0
margin_bottom = 42.0
rect_min_size = Vector2( 20, 0 )
custom_constants/separation = 10

[node name="Spacer3" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 46.0
margin_right = 400.0
margin_bottom = 96.0
rect_min_size = Vector2( 20, 50 )
custom_constants/separation = 10

[node name="Spacer4" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 400.0
margin_bottom = 110.0
rect_min_size = Vector2( 20, 0 )
custom_constants/separation = 10

[node name="ImportHeaderLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 400.0
margin_bottom = 128.0
hint_tooltip = "Audio bus for background musics"
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ImportHeaderLabel"]
margin_left = 89.0
margin_right = 311.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
text = "Import GGT Animation Tree Preset"
align = 1

[node name="Spacer5" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 400.0
margin_bottom = 142.0
rect_min_size = Vector2( 20, 0 )
custom_constants/separation = 10

[node name="CharFilePath" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 400.0
margin_bottom = 170.0
hint_tooltip = "Audio bus for background musics"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CharFilePath"]
margin_top = 5.0
margin_right = 119.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 14 )
text = "Character File Path"

[node name="PathField" type="LineEdit" parent="HBoxContainer/VBoxContainer/CharFilePath"]
margin_left = 123.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
editable = false
placeholder_text = "res://"

[node name="LoadFileDialog" type="FileDialog" parent="HBoxContainer/VBoxContainer/CharFilePath"]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/vinny-guerrero/Desktop/Godot/godot_hub/3.2/PluginCreator"
current_path = "/Users/vinny-guerrero/Desktop/Godot/godot_hub/3.2/PluginCreator/"

[node name="SelectCharFileBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 400.0
margin_bottom = 194.0
hint_tooltip = "Add a new empty entry in the dictionary"
focus_mode = 0
enabled_focus_mode = 0
text = "Select Character File"

[node name="Spacer6" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 400.0
margin_bottom = 208.0
rect_min_size = Vector2( 20, 0 )
custom_constants/separation = 10

[node name="ArmatureSettings" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 400.0
margin_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShapeToggle" type="CheckBox" parent="HBoxContainer/VBoxContainer/ArmatureSettings"]
margin_right = 154.0
margin_bottom = 24.0
text = "Add Collision Shape"

[node name="RootMotionToggle" type="CheckBox" parent="HBoxContainer/VBoxContainer/ArmatureSettings"]
margin_left = 158.0
margin_right = 327.0
margin_bottom = 24.0
text = "Add Root Motion View"

[node name="ArmatureSetupBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 400.0
margin_bottom = 260.0
hint_tooltip = "Add a new empty entry in the dictionary"
focus_mode = 0
enabled_focus_mode = 0
text = "Create Armature Setup"

[node name="Spacer7" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 400.0
margin_bottom = 274.0
custom_constants/separation = 10

[node name="StateMachineSetupBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 400.0
margin_bottom = 298.0
hint_tooltip = "Add a new empty entry in the dictionary"
focus_mode = 0
enabled_focus_mode = 0
text = "Create State Machine"

[node name="Spacer8" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 302.0
margin_right = 400.0
margin_bottom = 402.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 10

[node name="Spacer9" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 406.0
margin_right = 400.0
margin_bottom = 416.0
custom_constants/separation = 10

[node name="ExportHeaderLabel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 400.0
margin_bottom = 434.0
hint_tooltip = "Audio bus for background musics"
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExportHeaderLabel"]
margin_left = 91.0
margin_right = 309.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
text = "Export GGT Animation Tree Preset"
align = 1

[node name="Spacer10" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 400.0
margin_bottom = 448.0
custom_constants/separation = 10

[node name="ExportPresetName" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 400.0
margin_bottom = 476.0
hint_tooltip = "Audio bus for background musics"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExportPresetName"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 14 )
text = "Preset Name"

[node name="PresetName" type="LineEdit" parent="HBoxContainer/VBoxContainer/ExportPresetName"]
margin_left = 104.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
placeholder_text = "Sample Animation Tree Preset"

[node name="Spacer11" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 400.0
margin_bottom = 490.0
custom_constants/separation = 10

[node name="ExportPresetAuthor" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 400.0
margin_bottom = 518.0
hint_tooltip = "Audio bus for background musics"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExportPresetAuthor"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 14 )
text = "Preset Author"

[node name="PresetAuthor" type="LineEdit" parent="HBoxContainer/VBoxContainer/ExportPresetAuthor"]
margin_left = 104.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
placeholder_text = "Your Name / Nick"

[node name="Spacer12" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 400.0
margin_bottom = 532.0
custom_constants/separation = 10

[node name="ExportPresetVersion" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 536.0
margin_right = 400.0
margin_bottom = 560.0
hint_tooltip = "Audio bus for background musics"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExportPresetVersion"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 14 )
text = "Preset Version"

[node name="PresetVersion" type="LineEdit" parent="HBoxContainer/VBoxContainer/ExportPresetVersion"]
margin_left = 104.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
placeholder_text = "1.0"

[node name="Spacer13" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 400.0
margin_bottom = 574.0
custom_constants/separation = 10

[node name="ExportPresetPath" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 578.0
margin_right = 400.0
margin_bottom = 602.0
hint_tooltip = "Audio bus for background musics"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExportPresetPath"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 14 )
text = "Export  File Path"

[node name="ExportPathField" type="LineEdit" parent="HBoxContainer/VBoxContainer/ExportPresetPath"]
margin_left = 107.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
editable = false
placeholder_text = "res://"

[node name="ExportPathFileDialog" type="FileDialog" parent="HBoxContainer/VBoxContainer/ExportPresetPath"]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
mode = 2

[node name="Spacer14" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 606.0
margin_right = 400.0
margin_bottom = 616.0
custom_constants/separation = 10

[node name="SetExportPathBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 620.0
margin_right = 400.0
margin_bottom = 640.0
hint_tooltip = "Add a new empty entry in the dictionary"
focus_mode = 0
enabled_focus_mode = 0
text = "Set Export Path"

[node name="Spacer15" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 644.0
margin_right = 400.0
margin_bottom = 654.0
custom_constants/separation = 10

[node name="StateMachineExportBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 658.0
margin_right = 400.0
margin_bottom = 678.0
hint_tooltip = "Add a new empty entry in the dictionary"
focus_mode = 0
enabled_focus_mode = 0
text = "Export State Preset"
